hphp/test/slow/dv_array/parse-error5.php.expectf
Fatal error: Value of collection element cannot be marked as reference in %s/test/slow/dv_array/parse-error5.php on line 5